[NANOHUB][#265348][COM_COURSES] fix issue with content getting cut off by nav bar when large number of pages present in form builder

--- a/components/com_courses/assets/css/form.css
+++ b/components/com_courses/assets/css/form.css
@@ -122,6 +122,7 @@ label {
 }
 .navbar {
 	margin-top: 20px;
+	overflow: hidden;
 }
 .navbar button,
 .navbar a {
